--- a/admin/article_release.html
+++ b/admin/article_release.html
@@ -134,7 +134,53 @@
             // 或者 var editor = new E( document.getElementById('editor') )
             editor.create()
 
-            
+
+
+            // 封装函数
+            function publications(state) {
+                //利用FormData传数据
+                // 获取页面form表单
+                let form1 = $('#form')[0]
+                // 创建fd对象
+                let fd = new FormData(form1)
+                // 没有的数据通过append()添加,并且匹配表单中的name属性content,state需要添加
+                fd.append('content', editor.txt.html())//内容传富文本编辑器里面的内容
+                fd.append('state', state)//文章状态
+                // 发送ajax请求
+                $.ajax({
+                    type: 'post',
+                    url: BigNew.article_publish,
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        // console.log(backData)
+                        if (backData.code == 200) {
+                            alert('发表成功')
+                            //回退回去
+                            window.history.back();
+                        }
+                    }
+                })
+            }
+
+
+            // 发文章
+            $('.btn-release').on('click', function (e) {
+                e.preventDefault()
+
+                publications('已发布')
+
+            })
+
+            // 存草稿
+            $('.btn-draft').on('click', function (e) {
+                e.preventDefault()
+
+                publications('草稿')
+
+            })
+
 
 
 
