--- a/admin/index.html
+++ b/admin/index.html
@@ -34,7 +34,7 @@
             <ul class="level02">
                 <li id="one_a"><a href="./article_list.html" target="main_frame"><i
                             class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
-                <li><a href="./article_release.html" target="main_frame"><i
+                <li id="one_b"><a href="./article_release.html" target="main_frame"><i
                             class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
                 <li><a href="./article_category.html" target="main_frame"><i
                             class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
