--- a/index.html
+++ b/index.html
@@ -227,6 +227,181 @@
     <script src="./js/template-web.js"></script>
     <!-- 引入jq文件 -->
     <script src="./js/jquery-1.12.4.min.js"></script>
+
+    <!-- 最新资讯 -->
+    <script id="latest_temp" type="text/html">
+        {{each data v}}
+        <div class="common_news_list">
+            <a href="./article.html?id={{v.id}}" class="list_pic"><img src={{v.cover}} alt=""></a>
+            <h4><a href="./article.html?id={{v.id}}">{{v.title}}</a></h4>
+            <p>{{@ v.intro}}</p>
+            <div class="new_info">
+                <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( {{v.read}}
+                            )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( {{v.comments}} )</span>
+                <b>发布于 {{v.date}}</b>
+            </div>
+        </div>  
+        {{/each}}
+    </script>
+
+    <!-- 热点图新闻模板 -->
+    <script id="hotpic_temp" type="text/html">
+        {{each data v}}
+        {{if $index==0}}
+            <li class="first">
+        {{else}}
+            <li>
+        {{/if}}
+            <a href="./article.html?id={{v.id}}"><img src={{v.cover}} alt=""></a>
+            <p>{{v.title}}</p>
+            </li>
+        {{/each}}
+    </script>
+
+    <!-- 最新评论 -->
+    <script id="latestcomment_temp" type="text/html">
+        {{each data v}}
+        <li>
+            <span>{{v.author.substr(0,1)}}</span>
+            <b><em>{{v.author}}</em>{{v.date}}说:</b>
+            <strong>{{v.intro}}</strong>
+        </li>
+        {{/each}}
+    </script>
+
+
+    <!-- 焦点关注模块 -->
+    <script id="attention_temp" type="text/html">
+        {{each data v}}
+            <li><a href="{{v.id}}">{{v.intro}}</a></li>
+        {{/each}}
+    </script>
+
+    <!-- 文章类别 -->
+    <script id="category_temp2" type="text/html">
+        {{each data v}}
+        <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+        {{/each}}
+    </script>
+
+    <!-- 文章类别下拉菜单 -->
+    <script id="category_temp" type="text/html">
+        <li class="up"></li>
+        {{each data v}}
+        <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+        {{/each}}
+    </script>
+
+
+    <script>
+        // 入口函数
+        $(function () {
+            //  显示最新资讯,已发布的文章
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/latest',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // console.log(backData);
+                        let resHtml = template('latest_temp', backData)
+                        $('.common_news').html(resHtml)
+                    }
+                }
+            })
+
+            // 热点图新闻模板
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/hotpic',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        let resHtml = template('hotpic_temp', backData)
+                        $('.focus_list').html(resHtml)
+                    }
+                }
+            })
+
+            // 热门排行
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/rank',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // 写for循环完成渲染
+                        for (let i = 0; i < backData.data.length; i++) {
+                            // $('.hotrank_list>li>a')[i].innerText = backData.data[i].title
+                            // $('.hotrank_list>li>a')[i].setAttribute('href', './article.html?id=' + backData.data[i].id)
+                            $('.hotrank_list>li>a').eq(i).text(backData.data[i].title)
+                            $('.hotrank_list>li>a').eq(i).attr('href', './article.html?id=' + backData.data[i].id)
+                        }
+                    }
+                }
+            })
+
+            // 最新评论
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/latest_comment',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        let resHtml = template('latestcomment_temp', backData)
+                        $('.comment_list').html(resHtml)
+                    }
+                }
+            })
+
+            // 焦点关注
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/attention',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        let resHtml = template('attention_temp', backData)
+                        $('.guanzhu_list').html(resHtml)
+                    }
+                }
+            })
+
+            // 文章类别
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/category',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // 导航栏
+                        let resHtml = template('category_temp2', backData)
+                        $('.left_menu').html(resHtml)
+                        // 导航栏下拉菜单
+                        let resHtml1 = template('category_temp', backData)
+                        $('.level_two').html(resHtml1)
+                    }
+                }
+            })
+
+
+            // 文章搜索
+            // 给搜索按钮设置点击事件
+            $('.search_btn').on('click', function () {
+                //  获取输入框里面的内容
+                let textContent = $('.search_txt').val().trim()
+                // console.log(textContent);
+                if (textContent == '') {
+                    alert('内容不能为空')
+                    return
+                } elae(
+                    window.location.href = './list.html?textContent=' + textContent
+                )
+            })
+
+            // 文本输入框键盘按下事件
+            $('.search_txt').on('keydown', function (e) {
+                if (e.keyCode == 13) {
+                    $('.search_btn').click()
+                }
+            })
+
+        })
+    </script>
 </body>
 
 </html>
