--- a/admin/comment_list.html
+++ b/admin/comment_list.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="./libs/jquery-1.12.4.min.js"></script>
   <script src="./libs/template-web.js"></script>
+  <script src="./libs/http.js"></script>
+  <!-- 导入分页插件 -->
+  <script src="./libs/jquery.twbsPagination.js"></script>
+  <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -142,7 +146,7 @@
         </tbody>
       </table>
       <div class="row text-center">
-        <ul class="pagination pagination-sm">
+        <!-- <ul class="pagination pagination-sm">
           <li class="page-item first disabled"><a href="#" class="page-link">首页</a></li>
           <li class="page-item prev disabled"><a href="#" class="page-link">上一页</a></li>
           <li class="page-item active"><a href="#" class="page-link">1</a></li>
@@ -154,12 +158,168 @@
           <li class="page-item"><a href="#" class="page-link">7</a></li>
           <li class="page-item next"><a href="#" class="page-link">下一页</a></li>
           <li class="page-item last"><a href="#" class="page-link">尾页</a></li>
-        </ul>
+        </ul> -->
         <ul id="pagination" class="pagination-sm"></ul>
       </div>
 
     </div>
   </div>
+  <!-- 准备评论模版 -->
+  <script id="com_list_temp" type="text/html">
+    {{each data.data v}}
+    {{if v.state =='待审核'}}
+    <tr class="danger">
+    {{else}}
+    <tr>
+    {{/if}}
+        <td>{{v.author}}</td>
+        <td>{{v.content}}</td>
+        <td>{{v.title}}</td>
+        <td>{{v.date}} {{v.time}}</td>
+        <td>{{v.state}}</td>
+        <td class="text-center">
+          {{if v.state =='待审核'}}
+          <a href="javascript:void(0);;" data-id={{v.id}} class="btn btn-info btn-xs btn-ratify">批准</a>
+          {{else if v.state =='已通过'}}
+          <a href="javascript:void(0);;" data-id={{v.id}} class="btn btn-warning btn-xs btn-refuse">拒绝</a>
+          {{/if}}
+          <a href="javascript:void(0);;" data-id={{v.id}} class="btn btn-danger btn-xs btn-delete">删除</a>
+        </td>
+    </tr>
+    {{/each}}
+  </script>
+
+
+  <script>
+    $(function () {
+      // 声明变量来保存当前所点击的页码
+      let mypage = 1
+      // 封装函数
+      function getData(mypage, callBack) {
+        $.ajax({
+          type: 'get',
+          url: BigNew.comment_list,
+          data: {
+            page: mypage,
+            perpage: 6
+          },
+          success: function (backData) {
+            if (backData.code == 200) {
+              let resHtml = template('com_list_temp', backData)
+              $('tbody').html(resHtml)
+              if (callBack != null) {
+                callBack(backData)
+              }
+              // if (callBack != null && backData.data.data.length != 0) {
+              //   callBack(backData);
+              // } else if (backData.data.data.length == 0 && backData.data.totalPage == mypage - 1) {
+              //   //如果进到这里来,说明当前删除的是最后一页的最后一条数据
+              //   mypage -= 1;
+              //   //第一个参数就是事件名字
+              //   //第二个参数就是改变后的总的页码
+              //   //第三个参数就是当前要显示的页码
+              //   $('#pagination').twbsPagination('changeTotalPages', backData.data.totalPage, mypage);
+              // }
+
+
+            }
+          }
+        })
+      }
+      // 一进页面发送ajax请求显示评论
+      getData(1, function (backData) {
+        $('#pagination').twbsPagination({
+          totalPages: backData.data.totalPage,//页数
+          visiblePages: 7,//可见页数上限
+          first: '首页',
+          prev: '上一页',
+          next: '下一页',
+          last: '尾页',
+          onPageClick: function (event, page) {
+            // 当前点击的页码赋值给mypage
+            mypage = page
+            getData(page, null)
+          }
+        });
+      })
+
+      // 给批准,拒绝,删除按钮,设置点击事件,委托注册
+      // 批准
+      $('tbody').on('click', '.btn-ratify', function () {
+        let id = $(this).attr('data-id')
+        // console.log(id);
+        $.ajax({
+          type: 'post',
+          url: BigNew.comment_pass,
+          data: {
+            id: id
+          },
+          success: function (backData) {
+            if (backData.code == 200) {
+              alert('审核通过!')
+              getData(mypage, null)
+            }
+          }
+        })
+      })
+
+
+      //拒绝
+      $('tbody').on('click', '.btn-refuse', function () {
+        let id = $(this).attr('data-id')
+        // console.log(id);
+        $.ajax({
+          type: 'post',
+          url: BigNew.comment_reject,
+          data: {
+            id: id
+          },
+          success: function (backData) {
+            if (backData.code == 200) {
+              alert('拒绝成功!')
+              getData(mypage, null)
+            }
+          }
+        })
+      })
+
+      // 删除
+      $('tbody').on('click', '.btn-delete', function () {
+        let id = $(this).attr('data-id')
+        console.log(id);
+        $.ajax({
+          type: 'post',
+          url: BigNew.comment_delete,
+          data: {
+            id: id
+          },
+          success: function (backData) {
+            if (backData.code == 200) {
+              alert('删除成功!')
+              getData(mypage, function (backData) {
+                // 重新生成页码条
+                console.log(backData);
+                if (backData.data.totalPage == mypage || backData.data.data.length > 0) {
+                  $('#pagination').twbsPagination('changeTotalPages', backData.data.totalPage, mypage);
+                } else {
+                  $('#pagination').twbsPagination('changeTotalPages', backData.data.totalPage, mypage - 1);
+                }
+
+                // $('#pagination').twbsPagination('changeTotalPages', backData.data.totalPage, mypage);
+              })
+            }
+          }
+        })
+      })
+
+
+
+
+
+
+
+    })
+  </script>
 </body>
 
 </html>
