--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="header">
-        <a href="#" class="logo fl"><img src="images/logo.png" alt="logo"></a>
+        <a href="./index.html" class="logo fl"><img src="images/logo.png" alt="logo"></a>
         <div class="search_form fl">
             <input type="text" class="search_txt" placeholder="黑洞照片">
             <button class="search_btn"><i class="fa fa-search"></i></button>
@@ -227,6 +227,188 @@
     </div>
     <!-- 导包template -->
     <script src="./js/template-web.js"></script>
+
+    <!-- 最新评论 -->
+    <script id="latestcomment_temp" type="text/html">
+            {{each data v}}
+            <li>
+                <span>{{v.author.substr(0,1)}}</span>
+                <b><em>{{v.author}}</em>{{v.date}}说:</b>
+                <strong>{{v.intro}}</strong>
+            </li>
+            {{/each}}
+        </script>
+
+
+    <!-- 焦点关注模块 -->
+    <script id="attention_temp" type="text/html">
+            {{each data v}}
+                <li><a href="./article.html?id={{v.id}}">{{v.intro}}</a></li>
+            {{/each}}
+        </script>
+
+    <!-- 文章类别 -->
+    <script id="category_temp2" type="text/html">
+            {{each data v}}
+            <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+            {{/each}}
+        </script>
+    <!-- 文章类型模版 -->
+    <script id="latest_temp" type="text/html">
+        {{each data.data v}}
+        <div class="common_news_list">
+                <a href="./article.html?id={{v.id}}" class="list_pic"><img src='{{v.cover}}' alt=""></a>
+                <h4><a href="./article.html?id={{v.id}}">{{v.title}}</a></h4>
+                <p>{{v.intro}}</p>
+                <div class="new_info">
+                    <span>标签 {{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读( {{v.read}}
+                        )&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论( {{v.comments}} )</span>
+                    <b>发布于 {{v.date}}</b>
+                </div>
+            </div>
+        {{/each}}
+    </script>
+
+
+
+    <script>
+        $(function () {
+            // 判断进入的是哪个页面
+            let value1 = window.location.search.split('=')[0]
+            // console.log(value1);
+            // 获取搜索到的id或文章关键字
+            let value2 = window.location.search.split('=')[1]
+            // console.log(value2);
+            if (value1 == '?id') {
+                //  文章类别进来
+                // console.log('文章类别进来');
+                // 发送ajax请求获取文章类别,显示文章
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8080/api/v1/index/search',
+                    data: {
+                        type: value2
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+
+                        if (backData.code = 200) {
+                            let resHtml = template('latest_temp', backData)
+                            if (backData.data.data.length > 0) {
+                                $('.left_con').html('<div class="list_title"><h3>' + backData.data.data[0].category + '</h3></div>' + resHtml)
+                            } else (
+                                $('.left_con').html('<div class="list_title"><h3>没有数据</h3></div>')
+                            )
+                        }
+                    }
+                })
+
+
+            } else {
+                // 搜索进来
+                // console.log('文章搜索进来');
+                // console.log(value2);
+                
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8080/api/v1/index/search',
+                    data: {
+                        key: decodeURI(value2)////把通过url传过来的搜索关键词 解码
+                    },
+                    success: function (backData) {
+                        if (backData.code = 200) {
+                            let resHtml = template('latest_temp', backData)
+                            if (backData.data.data.length > 0) {
+                                $('.left_con').html('<div class="list_title"><h3>搜索词:' + decodeURI(value2) + '</h3></div>' + resHtml)
+                            } else (
+                                $('.left_con').html('<div class="list_title"><h3>没有数据</h3></div>')
+                            )
+                        }
+                    }
+                })
+
+            }
+
+
+            // 热门排行
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/rank',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // 写for循环完成渲染
+                        for (let i = 0; i < backData.data.length; i++) {
+                            // $('.content_list>li>a')[i].innerText = backData.data[i].title
+                            // $('.content_list>li>a')[i].setAttribute('href', './article.html?id=' + backData.data[i].id)
+                            $('.content_list>li>a').eq(i).text(backData.data[i].title)
+                            $('.content_list>li>a').eq(i).attr('href', './article.html?id=' + backData.data[i].id)
+                        }
+                    }
+                }
+            })
+
+            // 最新评论
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/latest_comment',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        let resHtml = template('latestcomment_temp', backData)
+                        $('.comment_list').html(resHtml)
+                    }
+                }
+            })
+
+            // 焦点关注
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/attention',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        let resHtml = template('attention_temp', backData)
+                        $('.guanzhu_list').html(resHtml)
+                    }
+                }
+            })
+
+            // 文章类别
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/index/category',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // 导航栏
+                        let resHtml = template('category_temp2', backData)
+                        $('.left_menu').html(resHtml)
+                        // 导航栏下拉菜单
+                        // let resHtml1 = template('category_temp', backData)
+                        $('.level_two').html('<li class="up"></li>' + resHtml)
+                    }
+                }
+            })
+
+            // 文章搜索
+            // 给搜索按钮设置点击事件
+            $('.search_btn').on('click', function () {
+                //  获取输入框里面的内容
+                let textContent = $('.search_txt').val().trim()
+                // console.log(textContent);
+                if (textContent == '') {
+                    alert('内容不能为空')
+                    return
+                } else (
+                    window.location.href = './list.html?textContent=' + textContent
+                )
+            })
+
+            // 文本输入框键盘按下事件
+            $('.search_txt').on('keydown', function (e) {
+                if (e.keyCode == 13) {
+                    $('.search_btn').click()
+                }
+            })
+        })
+    </script>
 </body>
 
 </html>
