--- a/admin/index.html
+++ b/admin/index.html
@@ -2,172 +2,165 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>大事件-后台首页</title>
-    <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/iconfont.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="./libs/jquery-1.12.4.min.js"></script>
-    <!-- 导入bootstrap的js文件 -->
-    <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
-    <!-- 引入接口地址js -->
-    <script src="./libs/http.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>大事件-后台首页</title>
+  <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/iconfont.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="./libs/jquery-1.12.4.min.js"></script>
+  <!-- 导入bootstrap的js文件 -->
+  <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
+  <!-- 引入接口地址js -->
+  <script src="./libs/http.js"></script>
 </head>
 
 <body>
-    <div class="sider">
-        <a href="#" class="logo"><img src="images/logo02.png" alt="logo"></a>
-        <div class="user_info">
-            <img src="images/2.jpg" alt="person">
-            <span>欢迎&nbsp;&nbsp;<i style="font-style: normal;"></i></span>
-            <b>管理员</b>
-        </div>
-        <!-- 左侧导航栏 -->
-        <div class="menu">
-            <div class="level01 active"><a href="./main_count.html" target="main_frame"><i
-                        class="iconfont icon-yidiandiantubiao04"></i><span>首页</span></a></div>
-            <div class="level01"><a href="#"><i class="iconfont icon-icon-article"></i><span>文章管理</span><b
-                        class="iconfont icon-arrowdownl"></b></a></div>
-            <ul class="level02">
-                <li id="one_a"><a href="./article_list.html" target="main_frame"><i
-                            class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
-                <li id="one_b"><a href="./article_release.html" target="main_frame"><i
-                            class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
-                <li><a href="./article_category.html" target="main_frame"><i
-                            class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
-                </li>
-            </ul>
-
-            <div class="level01"><a href="./comment_list.html" target="main_frame"><i
-                        class="iconfont icon-comment"></i><span>评论管理</span></a></div>
-            <div class="level01" id="user"><a href="./user.html" target="main_frame"><i
-                        class="iconfont icon-user"></i><span>个人中心</span></a></div>
-        </div>
-        <!-- 顶部栏 -->
-        <div class="header_bar">
-            <div class="user_center_link">
-                <a href="./user.html" target="main_frame">个人中心</a>
-                <img src="images/2.jpg" alt="person">
-                <a href="javascript:void(0)" class="logout"><i class="iconfont icon-tuichu"></i> 退出</a>
-            </div>
-        </div>
-        <!-- 右侧主体内容 -->
-        <div class="main" id="main_body">
-            <iframe name="main_frame" src="./main_count.html" frameborder="0"
-                style="width: 100%;height: 100%;"></iframe>
-        </div>
+  <div class="sider">
+    <a href="#" class="logo"><img src="images/logo02.png" alt="logo"></a>
+    <div class="user_info">
+      <img src="images/2.jpg" alt="person">
+      <span>欢迎&nbsp;&nbsp;<i style="font-style: normal;"></i></span>
+      <b>管理员</b>
     </div>
+    <!-- 左侧导航栏 -->
+    <div class="menu">
+      <div class="level01 active"><a href="./main_count.html" target="main_frame"><i
+            class="iconfont icon-yidiandiantubiao04"></i><span>首页</span></a></div>
+      <div class="level01"><a href="#"><i class="iconfont icon-icon-article"></i><span>文章管理</span><b
+            class="iconfont icon-arrowdownl"></b></a></div>
+      <ul class="level02">
+        <li id="one_a"><a href="./article_list.html" target="main_frame"><i
+              class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
+        <li id="one_b"><a href="./article_release.html" target="main_frame"><i
+              class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
+        <li><a href="./article_category.html" target="main_frame"><i
+              class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
+        </li>
+      </ul>
 
-
-
-    <!-- 使用bootstrap的模态框 -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">确定</button>
-                </div>
-            </div>
-        </div>
+      <div class="level01"><a href="./comment_list.html" target="main_frame"><i
+            class="iconfont icon-comment"></i><span>评论管理</span></a></div>
+      <div class="level01" id="user"><a href="./user.html" target="main_frame"><i
+            class="iconfont icon-user"></i><span>个人中心</span></a></div>
     </div>
+    <!-- 顶部栏 -->
+    <div class="header_bar">
+      <div class="user_center_link">
+        <a href="./user.html" target="main_frame">个人中心</a>
+        <img src="images/2.jpg" alt="person">
+        <a href="javascript:void(0)" class="logout"><i class="iconfont icon-tuichu"></i> 退出</a>
+      </div>
+    </div>
+    <!-- 右侧主体内容 -->
+    <div class="main" id="main_body">
+      <iframe name="main_frame" src="./main_count.html" frameborder="0" style="width: 100%;height: 100%;"></iframe>
+    </div>
+  </div>
 
 
 
-    <script>
-        $(function () {
-            $.ajax({
-                type: 'get',
-                // 使用$.ajaxSetup()在jQuery文件中设置全局配置
-                // 发送ajax请求前会运行这个函数,在这个函数中设置token令牌
-                // headers: {
-                //     Authorization: localStorage.getItem('token')
-                // },
-                url: BigNew.user_info,
-                success: function (backData) {
-                    // console.log(backData);
-                    if (backData.code == 200) {
-                        $('.user_info>img').attr('src', backData.data.userPic)
-                        $('.user_info>span>i').text(backData.data.nickname)
-                        $('.user_center_link>img').attr('src', backData.data.userPic)
-                    }
-                }
-            })
-
-            // // 原生发送ajax请求,带token过去
-            // // 创建xhr对象
-            // let xhr = new XMLHttpRequest();
-            // // 调用open方法
-            // xhr.open('get', 'http://localhost:8080/api/v1/admin/user/info');
-            // // 把存放在本地的token令牌取出来,通过请求头的方式发给后端接口
-            // xhr.setRequestHeader('Authorization', localStorage.getItem('token'));
-            // //设置回调函数,也就是请求成功之后要执行的函数
-            // xhr.onload = function () {
-            //     console.log(xhr.response)
-            // }
-            // // 调用xhr的send方法
-            // xhr.send()
+  <!-- 使用bootstrap的模态框 -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">确定</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
-            // 二:退出
-            $('.logout').on('click', function (e) {
-                e.preventDefault()
-                // 删除token
-                localStorage.removeItem('token')
-                $('.modal-body').text('退出成功');
-                $('#myModal').modal();
-                $('#myModal').on('hidden.bs.modal', function (e) {
-                    // 回到登录页
-                    window.location.href = './login.html'
-                })
-            })
+
+  <script>
+    $(function () {
+      $.ajax({
+        type: 'get',
+        // 使用$.ajaxSetup()在jQuery文件中设置全局配置
+        // 发送ajax请求前会运行这个函数,在这个函数中设置token令牌
+        // headers: {
+        //     Authorization: localStorage.getItem('token')
+        // },
+        url: BigNew.user_info,
+        success: function (backData) {
+          // console.log(backData);
+          if (backData.code == 200) {
+            $('.user_info>img').attr('src', backData.data.userPic)
+            $('.user_info>span>i').text(backData.data.nickname)
+            $('.user_center_link>img').attr('src', backData.data.userPic)
+          }
+        }
+      })
+
+      // // 原生发送ajax请求,带token过去
+      // // 创建xhr对象
+      // let xhr = new XMLHttpRequest();
+      // // 调用open方法
+      // xhr.open('get', 'http://localhost:8080/api/v1/admin/user/info');
+      // // 把存放在本地的token令牌取出来,通过请求头的方式发给后端接口
+      // xhr.setRequestHeader('Authorization', localStorage.getItem('token'));
+      // //设置回调函数,也就是请求成功之后要执行的函数
+      // xhr.onload = function () {
+      //     console.log(xhr.response)
+      // }
+      // // 调用xhr的send方法
+      // xhr.send()
 
 
-            // 给左侧的一级导航栏设置点击事件
-            $('div>.level01').on('click', function () {
-                // 当前点击的添加active类,其余的移除active类(排他思想)
-                $(this).addClass('active').siblings('div').removeClass('active')
-                // console.log($(this).index());
-                // 当前点击的如果是文章管理,就出现二级菜单
-                if ($(this).index() == 1) {
-                    $('ul.level02').slideToggle()
-
-                    // 设置箭头的旋转
-                    $(this).find('b').toggleClass('rotate0')
-                    // 默认选中第一个二级菜单
-                    // $('ul.level02>li:eq(0)').trigger('click');
-                    // console.log($('ul.level02>li:eq(0)'));
-
-                    $('#one_a>a')[0].click()
-                    //jQuery对象的click()事件,他只会触发js单击事件,而不会触发a标签的默认跳转事件.
-                    //dom对象的click()事件,他不仅会触发js单击事件,还会触发a标签的默认跳转事件
-
-                }
-            })
-
-            // 给二级菜单设置点击事件
-            $('.level02>li').on('click', function () {
-                // 当前点击的添加active类,其余的移除active类(排他思想)
-                $(this).addClass('active').siblings('li').removeClass('active')
-            })
+      // 二:退出
+      $('.logout').on('click', function (e) {
+        e.preventDefault()
+        // 删除token
+        localStorage.removeItem('token')
+        $('.modal-body').text('退出成功');
+        $('#myModal').modal();
+        $('#myModal').on('hidden.bs.modal', function (e) {
+          // 回到登录页
+          window.location.href = './login.html'
         })
+      })
 
 
+      // 给左侧的一级导航栏设置点击事件
+      $('div>.level01').on('click', function () {
+        // 当前点击的添加active类,其余的移除active类(排他思想)
+        $(this).addClass('active').siblings('div').removeClass('active')
+        // console.log($(this).index());
+        // 当前点击的如果是文章管理,就出现二级菜单
+        if ($(this).index() == 1) {
+          $('ul.level02').slideToggle()
 
+          // 设置箭头的旋转
+          $(this).find('b').toggleClass('rotate0')
+          // 默认选中第一个二级菜单
+          // $('ul.level02>li:eq(0)').trigger('click');
+          // console.log($('ul.level02>li:eq(0)'));
 
+          $('#one_a>a')[0].click()
+          //jQuery对象的click()事件,他只会触发js单击事件,而不会触发a标签的默认跳转事件.
+          //dom对象的click()事件,他不仅会触发js单击事件,还会触发a标签的默认跳转事件
 
+        }
+      })
 
-    </script>
+      // 给二级菜单设置点击事件
+      $('.level02>li').on('click', function () {
+        // 当前点击的添加active类,其余的移除active类(排他思想)
+        $(this).addClass('active').siblings('li').removeClass('active')
+      })
+    })
+  </script>
 </body>
 
 </html>
